syntax = "proto2";

import "scalapb/scalapb.proto";

package app.softnetwork.persistence.auth.model;

option (scalapb.options) = {
    single_file: true
    flat_package: true
};

enum AccountStatus {
    UnknownAccountStatus = 0;
    // user account should be disabled after a configurable number of successive login failures
    Disabled = 1;
    // user account has been deleted
    Deleted = 2;
    // user account by default is inactive
    Inactive = 3;
    // user account must be active in oprder to access platform
    Active = 4;
    // activation token has not been sent
    PendingActivation = 5;
}
