syntax = "proto2";

import "scalapb/scalapb.proto";
import "model/platform.proto";
import "model/profileType.proto";
import "model/principalType.proto";
import "model/accountStatus.proto";
import "google/protobuf/timestamp.proto";

package app.softnetwork.persistence.auth.model;

option (scalapb.options) = {
    single_file: true
    flat_package: true
    import: "app.softnetwork.persistence.message._"
    import: "app.softnetwork.persistence.model._"
    import: "app.softnetwork.serialization._"
    import: "app.softnetwork.persistence.auth.model._"
    import: "app.softnetwork.persistence.auth.serialization._"
    import: "app.softnetwork.protobuf.ScalaPBTypeMappers._"
    import: "Protobuf._"
    preserve_unknown_fields: false
};

message Principal {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).companion_extends = "PrincipalCompanion";
    required PrincipalType type = 1;
    required string value = 2;
}

message VerificationToken {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "VerificationExpirationDate";
    option (scalapb.message).companion_extends = "VerificationTokenCompanion";
    required string token = 1;
    required google.protobuf.Timestamp expirationDate = 2 [(scalapb.field).type = "java.util.Date"];
}

message VerificationCode {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "VerificationExpirationDate";
    option (scalapb.message).companion_extends = "VerificationCodeCompanion";
    required string code = 1;
    required google.protobuf.Timestamp expirationDate = 2 [(scalapb.field).type = "java.util.Date"];
}

message DeviceRegistration {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).companion_extends = "DeviceRegistrationCompanion";
    required string regId = 1;
    required org.softnetwork.notification.model.Platform platform = 2;
    optional string applicationId = 3;
    optional string deviceId = 4;
    extensions 100 to max;
}

message BasicAccountProfile {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "Profile";
    option (scalapb.message).extends = "AccountDetails";
    option (scalapb.message).extends = "Timestamped";
    required string uuid = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required string name = 4;
    required ProfileType type = 5;
    required string firstName = 6 [default = ""];
    required string lastName = 7 [default = ""];
    optional string phoneNumber = 8;
    optional string email = 9;
    optional string description = 10;
    optional string userName = 11;
    extensions 100 to max;
}

message BasicAccountDetails {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "AccountDetails";
    option (scalapb.message).extends = "Timestamped";
    required string uuid = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required string firstName = 4 [default = ""];
    required string lastName = 5 [default = ""];
    optional string phoneNumber = 6;
    optional string email = 7;
    optional string userName = 8;
    extensions 100 to max;
}

message BasicAccount {
    option (scalapb.message).extends = "ProtobufDomainObject";
    option (scalapb.message).extends = "Account";
    option (scalapb.message).extends = "Timestamped";
    option (scalapb.message).extends = "BasicAccountDecorator";
    option (scalapb.message).companion_extends = "BasicAccountCompanion";
    required string uuid = 1;
    required google.protobuf.Timestamp createdDate = 2 [(scalapb.field).type = "java.util.Date"];
    required google.protobuf.Timestamp lastUpdated = 3 [(scalapb.field).type = "java.util.Date"];
    required Principal principal = 4;
//    required Principal primaryPrincipal = 5;
    repeated Principal secondaryPrincipals = 6;
    optional BasicAccountProfile currentProfile = 7 [(scalapb.field).type = "Profile"];
    map<string, BasicAccountProfile> profiles = 8 [(scalapb.field).value_type = "Profile"];
    required string credentials = 9;
    optional google.protobuf.Timestamp lastLogin = 10 [(scalapb.field).type = "java.util.Date"];
    required int32 nbLoginFailures = 11 [default = 0];
    required AccountStatus status = 12 [default = Inactive];
    optional VerificationToken verificationToken = 13;
    optional VerificationCode verificationCode = 14;
    optional BasicAccountDetails details = 15 [(scalapb.field).type = "AccountDetails"];
    repeated DeviceRegistration registrations = 16;
    optional google.protobuf.Timestamp lastLogout = 17 [(scalapb.field).type = "java.util.Date"];
    optional bool anonymous = 18;
    optional bool fromAnonymous = 19;
    extensions 100 to max;
}

message ValidationError {
    required string msg = 1;
}

message Poi {
    required double latitude = 1;
    required double longitude = 2;
    required double endAltitude = 3;
}
