syntax = "proto2";

import "scalapb/scalapb.proto";

package app.softnetwork.persistence.auth.model;

option (scalapb.options) = {
    single_file: true
    flat_package: true
};

enum PrincipalType {
    Other = 0;
    Uuid = 1;
    Email = 2;
    Gsm = 3;
    Username = 4;
}
